yaml/microk8s/prometheus/grafana-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-dashboard
  namespace: observability
  labels:
    app.kubernetes.io/instance: kube-prom-stack
    app.kubernetes.io/name: grafana
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: kube-prom-stack
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 3000
